--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -15,3 +15,67 @@
  */
 
 strong{text-transform: uppercase;}
+
+body{
+	margin: 0px;
+
+}
+
+
+.heading{
+	color: white;
+	background-color: #54AEDA;
+	text-align:center;
+	font-size: 30px;
+	font-family: "OpenSans-Regular";
+	padding: 30px;
+	margin-bottom: 30px;
+	display: block;
+}
+.plus{
+
+	height: 30px;
+	padding: 5px;
+}
+@font-face {
+	font-family: "OpenSans-Regular";
+	src: url("OpenSans-Regular.ttf") format("truetype");
+	font-style: normal; 
+	font-weight: normal; 
+} 
+
+.project_box{
+	font-size: 20px;
+	font-family: "OpenSans-Regular";
+	align-content: top;
+	float: left;
+	width: 500px;
+	margin: 1em;
+}
+
+.project_table{
+	width: 90%;
+	box-shadow: 0px 1px 2px 1px #D2D2D2;
+
+}
+
+.check_box{
+	height: 30px;
+	width: 30px;
+	border: 1px solid #D2D2D2;
+	margin: 20px;
+}
+th {
+	border-bottom: 1px solid #D2D2D2;
+	padding: 10px;
+}
+
+td {
+	padding: 20px;
+}
+
+.done{
+	height: 20px;
+	width: 20px; 
+	padding: 5px
+}
