--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,81 +1,122 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+	/*
+	 * This is a manifest file that'll be compiled into application.css, which will include all the files
+	 * listed below.
+	 *
+	 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
+	 * vendor/assets/stylesheets directory can be referenced here using a relative path.
+	 *
+	 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
+	 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
+	 * files in this directory. Styles in this file should be added after the last require_* statement.
+	 * It is generally better to create a new file per style scope.
+	 *
+	 *= require_tree .
+	 *= require_self
+	 */
 
-strong{text-transform: uppercase;}
+	strong{
+		text-transform: uppercase;
+		font-family: "OpenSans-Regular";
+		display: block;
+	}
 
-body{
-	margin: 0px;
+	body{
+		margin: 0px;
 
-}
+	}
 
 
-.heading{
-	color: white;
-	background-color: #54AEDA;
-	text-align:center;
-	font-size: 30px;
-	font-family: "OpenSans-Regular";
-	padding: 30px;
-	margin-bottom: 30px;
-	display: block;
-}
-.plus{
+	.heading{
+		color: white;
+		background-color: #54AEDA;
+		text-align:center;
+		font-size: 30px;
+		font-family: "OpenSans-Regular";
+		padding: 30px;
+		margin-bottom: 30px;
+		display: block;
+	}
+	.plus{
 
-	height: 30px;
-	padding: 5px;
-}
-@font-face {
-	font-family: "OpenSans-Regular";
-	src: url("OpenSans-Regular.ttf") format("truetype");
-	font-style: normal; 
-	font-weight: normal; 
-} 
+		height: 30px;
+		padding: 5px;
+	}
+	@font-face {
+		font-family: "OpenSans-Regular";
+		src: url("OpenSans-Regular.ttf") format("truetype");
+		font-style: normal; 
+		font-weight: normal; 
+	} 
 
-.project_box{
-	font-size: 20px;
-	font-family: "OpenSans-Regular";
-	align-content: top;
-	float: left;
-	width: 500px;
-	margin: 1em;
-}
+	.project_box{
+		font-size: 20px;
+		font-family: "OpenSans-Regular";
+		align-content: top;
+		float: left;
+		width: 500px;
+		margin: 1em;
+	}
 
-.project_table{
-	width: 90%;
-	box-shadow: 0px 1px 2px 1px #D2D2D2;
+	.project_table{
+		width: 90%;
+		box-shadow: 0px 1px 2px 1px #D2D2D2;
 
-}
+	}
 
-.check_box{
-	height: 30px;
-	width: 30px;
-	border: 1px solid #D2D2D2;
-	margin: 20px;
-}
-th {
-	border-bottom: 1px solid #D2D2D2;
-	padding: 10px;
-}
+	.check_box{
+		height: 30px;
+		width: 30px;
+		border: 1px solid #D2D2D2;
+		margin: 20px;
+	}
+	th {
+		border-bottom: 1px solid #D2D2D2;
+		padding: 10px;
+	}
 
-td {
-	padding: 20px;
-}
+	td {
+		padding: 20px;
+	}
 
-.done{
-	height: 20px;
-	width: 20px; 
-	padding: 5px
-}
+	.done{
+		height: 20px;
+		width: 20px; 
+		padding: 5px
+	}
+
+	.box-modal{
+		align-content: center;
+		background-color: white;
+		height: 260px;
+		width: 460px;
+		text-align: center;
+	}
+
+	.todo_text{
+		display: inline-block;
+		padding: 10px;
+		height: 30px;
+		width: 400px;
+		margin: 10px;
+		border: 1px solid #B2B2B6;
+		color: #B2B2B6;
+	    font-size: 20px;
+		font-family: OpenSans-Regular;
+	}
+	select{
+		display: inline-block;
+		padding: 10px;
+		height: 50px;
+		width: 420px;
+		margin: 10px;
+	    border: 1px solid #B2B2B6;
+		color: #B2B2B6;
+		font-size: 20px;
+		font-family: OpenSans-Regular;
+	}
+
+	option {
+		color: #43495A;
+		font-size: 20px;
+		font-family: OpenSans-Regular;
+	}
