--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -6,7 +6,8 @@
 		<script type="text/javascript" src="jquery-3.4.1.js"></script>
 		<script src="jquery.arcticmodal-0.3.min.js"></script>
 		<link rel="stylesheet" href="jquery.arcticmodal-0.3.css">
-
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+		
 		<title>Задачи</title>
 
 	</head>
