--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,121 +1,132 @@
-	/*
-	 * This is a manifest file that'll be compiled into application.css, which will include all the files
-	 * listed below.
-	 *
-	 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
-	 * vendor/assets/stylesheets directory can be referenced here using a relative path.
-	 *
-	 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
-	 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
-	 * files in this directory. Styles in this file should be added after the last require_* statement.
-	 * It is generally better to create a new file per style scope.
-	 *
-	 *= require_tree .
-	 *= require_self
-	 */
+/*
+ * This is a manifest file that'll be compiled into application.css, which will include all the files
+ * listed below.
+ *
+ * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
+ * vendor/assets/stylesheets directory can be referenced here using a relative path.
+ *
+ * You're free to add application-wide styles to this file and they'll appear at the bottom of the
+ * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
+ * files in this directory. Styles in this file should be added after the last require_* statement.
+ * It is generally better to create a new file per style scope.
+ *
+ *= require_tree .
+ *= require_self
+ */
+ 
+strong{
+	text-transform: uppercase;
+	font-family: 'OpenSans', sans-serif;
+	display: block;
+}
 
-	strong{
-		text-transform: uppercase;
-		font-family: 'Open Sans', sans-serif;
-		display: block;
-	}
+.heading{
+	color: white;
+	background-color: #54AEDA;
+	text-align:center;
+	font-size: 30px;
+	font-family: 'OpenSans';
+	padding: 30px;
+	margin-bottom: 30px;
+	display: block;
+}
+.plus{
+	height: 40px;
+	padding: 5px;
+}
+@font-face {
+	font-family: 'OpenSans';
+	src: url('OpenSans-Regular.ttf');
+	font-style: normal; 
+	font-weight: normal; 
+} 
 
-	body{
-		margin: 0px;
+.project_box{
+	font-size: 20px;
+	font-family: 'OpenSans', sans-serif;
+	float: left;
+	width: 500px;
+	margin: 1em;
+}
 
-	}
+.project_table{
+	width: 90%;
+	box-shadow: 0px 1px 2px 2px #D2D2D2;
+}
+
+.check_box{
+	height: 30px;
+	border: 1px solid #D2D2D2;
+}
+
+th {
+	border-bottom: 1px solid #D2D2D2;
+	padding: 10px;
+}
+
+td {
+	padding: 20px;
+}
+
+.done{
+	height: 22px;
+	width: 25px; 
+	padding: 3px
+	border: 0px solid #D2D2D2;
+	margin-bottom:2px;
+}
 
 
-	.heading{
-		color: white;
-		background-color: #54AEDA;
-		text-align:center;
-		font-size: 30px;
-		font-family: 'Open Sans', sans-serif;
-		padding: 30px;
-		margin-bottom: 30px;
-		display: block;
-	}
-	.plus{
+.todo_text{
+	display: inline-block;
+	padding: 10px;
+	height: 50px;
+	width: 420px;
+	margin: 10px;
+	border: 1px solid #B2B2B6;
+	color: #B2B2B6;
+    font-size: 20px;
+	font-family: 'OpenSans';
+}
+select{
+	display: inline-block;
+	padding: 10px;
+	height: 50px;
+	width: 420px;
+	margin: 10px;
+    border: 1px solid #B2B2B6;
+	color: #B2B2B6;
+	font-size: 20px;
+	font-family: 'OpenSans';
+}
 
-		height: 30px;
-		padding: 5px;
-	}
-	@font-face {
-		font-family: 'Open Sans', sans-serif;
-		font-style: normal; 
-		font-weight: normal; 
-	} 
+option {
+	color: #43495A;
+	font-size: 20px;
+	font-family: 'OpenSans';
+}
+#create-overlay{
+ 	background-color: white;
+	height: 250px;width: 480px;
+	text-align:center;
+	padding: 10px;
+}
+#mask {
+	display: none;
+    background-color:rgba(0,0,0,.3);
+    height:100%;
+    position:fixed;
+    width:100%;
+    top:0;
+    left:0;
+}
+.CANCLE{
+	display: inline-block; height: 50px; width: 200px;margin: 8px; background-color: #9F9F9F;
+}
+.OK{
+	display: inline-block; height: 50px; width: 200px;margin: 8px; background-color: #54AEDA;
+}
 
-	.project_box{
-		font-size: 20px;
-		font-family: 'Open Sans', sans-serif;
-		align-content: top;
-		float: left;
-		width: 500px;
-		margin: 1em;
-	}
-
-	.project_table{
-		width: 90%;
-		box-shadow: 0px 1px 2px 1px #D2D2D2;
-
-	}
-
-	.check_box{
-		height: 30px;
-		width: 30px;
-		border: 1px solid #D2D2D2;
-		margin: 20px;
-	}
-	th {
-		border-bottom: 1px solid #D2D2D2;
-		padding: 10px;
-	}
-
-	td {
-		padding: 20px;
-	}
-
-	.done{
-		height: 20px;
-		width: 20px; 
-		padding: 5px
-	}
-
-	.box-modal{
-		align-content: center;
-		background-color: white;
-		height: 260px;
-		width: 460px;
-		text-align: center;
-	}
-
-	.todo_text{
-		display: inline-block;
-		padding: 10px;
-		height: 30px;
-		width: 400px;
-		margin: 10px;
-		border: 1px solid #B2B2B6;
-		color: #B2B2B6;
-	    font-size: 20px;
-		font-family: 'Open Sans', sans-serif;
-	}
-	select{
-		display: inline-block;
-		padding: 10px;
-		height: 50px;
-		width: 420px;
-		margin: 10px;
-	    border: 1px solid #B2B2B6;
-		color: #B2B2B6;
-		font-size: 20px;
-		font-family: 'Open Sans', sans-serif;
-	}
-
-	option {
-		color: #43495A;
-		font-size: 20px;
-		font-family: 'Open Sans', sans-serif;
-	}
+.btn_text{
+	color: white; padding: 15px;
+}
