--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -72,7 +72,7 @@ td {
 	height: 22px;
 	width: 25px; 
 	padding: 3px
-	margin-bottom:2px;
+	margin-bottom: 2px;
 }
 
 
@@ -112,20 +112,29 @@ option {
 }
 #mask {
 	display: none;
-    background-color:rgba(0,0,0,.3);
-    height:100%;
-    position:fixed;
-    width:100%;
-    top:0;
-    left:0;
+    background-color: rgba(0,0,0,.3);
+    height: 100%;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
 }
 .CANCLE{
-	display: inline-block; height: 50px; width: 200px;margin: 8px; background-color: #9F9F9F;
+	display: inline-block;
+	height: 50px;
+	width: 200px;
+	margin: 8px;
+	background-color: #9F9F9F;
 }
 .OK{
-	display: inline-block; height: 50px; width: 200px;margin: 8px; background-color: #54AEDA;
+	display: inline-block;
+	height: 50px;
+	width: 200px;
+	margin: 8px;
+	background-color: #54AEDA;
 }
 
 .btn_text{
-	color: white; padding: 15px;
+	color: white;
+	padding: 15px;
 }
